@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,7 +36,7 @@ public class NearbySearchAsyncService {
     List<NearbySearchLocation> locations =
         Arrays.stream(searchResponse.results)
             .map(placesSearchResult -> createNearbySearchLocation(placesSearchResult, nearbySearch))
-            .collect(Collectors.toList());
+            .toList();
 
     nearbySearchLocationRepository.saveAll(locations);
   }
